# calculus

./: .gitignore  CMakeLists.txt  main.cpp
include/: atomType.h  basicOpperation.h
src/: atomType.cpp  basicOpperation.cpp
tests/: TEST.cpp
